--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 SERVER_PORT=3040
 USER_AGENT="Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/123.0.0.0 Safari/537.36"
 NEW_SESSION_RETRIES=5
-API_KEY=
+API_KEY=sk-fSlwQGW8BkLpk_NaRTUc_uxTH5g6b52YzXqBYClTcWT3BlbkFJW_19s8oIC2B58iGTm_7BsuRGKfCjmwtx6_s3aN6O0A
 CLOUDFLARED=true
 
 PROXY=false
